tests/success/pointer_arithmetic_resolve7.bz
function test()
{
	(consteval {
		let p: ?*S = null;
		if (p != null)
		{
			1 + p;
		}
	});
}

struct S
{
	.i: i32;
}
