tests/error/comptime/check_dereference12.bz
struct S
{
	.p: ?*int32;

	destructor(&self)
	{
		*self.p;
	}
}

function test()
{
	(consteval {
		let t = [ S(), 0 ];
		t[0].p = &t[1];
	});
}
